--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,8 +2,11 @@
 <head>
   <title>MD</title>
 </head>
+<link rel="stylesheet" href="/style.css" type="text/css" media=screen />
 <body>
-  <%= listing %>
-  <%= yield %>
+  <%= erb :menu %>
+  <section>
+    <%= yield %>
+  </section>
 </body>
 </html>
